Handling exceptions - after assignment